# opencv-pg

./: MIGRATION_NOTES.md  README.md  pyproject.toml
src/opencv_pg/: imgui_main.py  imgui_playground.py  launcher.py  pipeline_launcher.py
src/opencv_pg/models/: base_transform.py  params.py  transforms.py  window.py
